objects/DocumentOption__c.object
<CustomObject>
    <fields>
        <fullName>DocumentOptionEID__c</fullName>
        <description>The Enterprise ID for this Document Option.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Document Option.</inlineHelpText>
        <label>Document Option EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DocumentStep__c</fullName>
        <description>The document step requiring this document type.</description>
        <inlineHelpText>The document  step requiring this document type.</inlineHelpText>
        <label>Document Step</label>
        <referenceTo>DocumentStep__c</referenceTo>
        <relationshipLabel>Document Options</relationshipLabel>
        <relationshipName>DocumentOptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>The document type needed for this function</description>
        <inlineHelpText>The document type needed for this function</inlineHelpText>
        <label>Document Type</label>
        <referenceTo>Documenttype__c</referenceTo>
        <relationshipName>FunctionDocumentTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmployeSourceEIDforPQFormula__c</fullName>
        <description>The Employee source EID</description>
        <formula>DocumentType__r.DocumentSource__r.DocumentSourceEID__c</formula>
        <inlineHelpText>The Employee source EID</inlineHelpText>
        <label>EmployeSourceEIDforPQFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentStep__c</columns>
        <columns>DocumentType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Document Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>